argocd/n8n-prod/n8n-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-app
  labels:
    app: n8n-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n-app
  strategy:
    type: Recreate
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: n8n-app
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      securityContext:
        fsGroup: 1000
      containers:
      - image: docker.io/n8nio/n8n:2.29.5
        name: n8n
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: n8n-data
          mountPath: /home/node/.n8n
        resources:
          requests:
            cpu: 50m
            memory: 640Mi
          limits:
            memory: 2Gi
      volumes:
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-data
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-app
spec:
  type: ClusterIP
  selector:
    app: n8n-app
  ports:
  - port: 80
    targetPort: 5678
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: n8n
spec:
  gateways:
  - istio-ingress/waffle-ingressgateway
  - mesh
  hosts:
  - n8n.wafflestudio.com
  http:
  - route:
    - destination:
        host: n8n-app
        port:
          number: 80
